[gd_scene load_steps=18 format=3 uid="uid://bueufkljryjug"]

[ext_resource type="Script" path="res://Runtime/Script/Manager/Stage_0_1.gd" id="1_6yfbi"]
[ext_resource type="Texture2D" uid="uid://cfl5vd288pito" path="res://Runtime/Resource/Background/stage0-1.png" id="1_tbd8e"]
[ext_resource type="Texture2D" uid="uid://dkkyy4e03c8on" path="res://Runtime/Resource/Background/s0-1_door_light.png" id="2_3es4c"]
[ext_resource type="PackedScene" uid="uid://bx7do7py8jbba" path="res://Runtime/Prefab/s0_person.tscn" id="2_lc70h"]
[ext_resource type="PackedScene" uid="uid://bfu8jl255k6mq" path="res://Runtime/Prefab/s0_1_cross_door.tscn" id="3_oas88"]
[ext_resource type="PackedScene" uid="uid://cs31mftu1xuen" path="res://Runtime/Prefab/s0_1_cross_door_part2.tscn" id="4_e1giy"]
[ext_resource type="Texture2D" uid="uid://de4um0a7gy488" path="res://Runtime/Resource/Sprite/S0-1_UI/x_normal.png" id="5_013ke"]
[ext_resource type="Texture2D" uid="uid://dh7npyt7dk7w5" path="res://Runtime/Resource/Sprite/S0-1_UI/x_press.png" id="7_qmkdr"]
[ext_resource type="BitMap" uid="uid://dr4ldju8jjhpj" path="res://Runtime/Resource/Sprite/S2-1_UI_icon/x_click.bmp" id="8_jx5ab"]
[ext_resource type="PackedScene" uid="uid://bofbb0bvx1ysw" path="res://Runtime/Prefab/hud.tscn" id="10_rpb32"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gipgw"]
size = Vector2(672, 2316)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_imu5k"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_iewam"]
normal = Vector2(-1, 0)

[sub_resource type="Animation" id="Animation_vi6oa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("X:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ype8s"]
resource_name = "button_x_appear"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("X:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_s0muq"]
resource_name = "button_x_disappear"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("X:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gpj5e"]
_data = {
"RESET": SubResource("Animation_vi6oa"),
"button_x_appear": SubResource("Animation_ype8s"),
"button_x_disappear": SubResource("Animation_s0muq")
}

[node name="Root" type="Node2D"]
script = ExtResource("1_6yfbi")

[node name="background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_tbd8e")

[node name="DoorArea2D" type="Area2D" parent="background"]
position = Vector2(8624, 1936)

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/DoorArea2D"]
shape = SubResource("RectangleShape2D_gipgw")

[node name="StaticBody2D" type="StaticBody2D" parent="background"]

[node name="L" type="CollisionShape2D" parent="background/StaticBody2D"]
position = Vector2(16, 0)
shape = SubResource("WorldBoundaryShape2D_imu5k")

[node name="R" type="CollisionShape2D" parent="background/StaticBody2D"]
position = Vector2(10276, 0)
shape = SubResource("WorldBoundaryShape2D_iewam")

[node name="door_light" type="TextureRect" parent="."]
visible = false
offset_left = 1983.0
offset_top = 69.0
offset_right = 3357.0
offset_bottom = 3081.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_3es4c")

[node name="person" parent="." node_paths=PackedStringArray("camera") instance=ExtResource("2_lc70h")]
position = Vector2(237, 551)
scale = Vector2(0.25, 0.25)
camera = NodePath("../Camera2D")

[node name="s0_1_cross_door" parent="." instance=ExtResource("3_oas88")]
visible = false
position = Vector2(960, 540)

[node name="s0_1_cross_door_part2" parent="." instance=ExtResource("4_e1giy")]
visible = false
position = Vector2(960, 540)

[node name="s0_1_interacitive" type="Node2D" parent="."]

[node name="X" type="TextureButton" parent="s0_1_interacitive"]
modulate = Color(1, 1, 1, 0)
offset_left = 2111.0
offset_top = 884.0
offset_right = 2204.0
offset_bottom = 976.0
texture_normal = ExtResource("5_013ke")
texture_pressed = ExtResource("7_qmkdr")
texture_click_mask = ExtResource("8_jx5ab")

[node name="AnimationPlayer" type="AnimationPlayer" parent="s0_1_interacitive"]
libraries = {
"": SubResource("AnimationLibrary_gpj5e")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="HUD" parent="." instance=ExtResource("10_rpb32")]

[connection signal="area_entered" from="background/DoorArea2D" to="." method="on_body_entered"]
[connection signal="area_exited" from="background/DoorArea2D" to="." method="on_body_exited"]
